test_suite/tests/ui/fail/misplace_attribute/command_in_struct_method.rs
use clapi::macros::*;

struct MyStruct;
impl MyStruct {
    #[command]
    fn app(&self) {}
}

fn main(){}